fix: changed height of cards in admin page so that there is no scrollbar

--- a/src/components/admin-page/card/card.module.css
+++ b/src/components/admin-page/card/card.module.css
@@ -1,5 +1,5 @@
 .card {
   composes: category from "../category/category.module.css";
-  min-height: 360px;
+  min-height: 345px;
   font-size: 1rem;
 }
