--- a/src/components/admin-page/card/dafault-view/default-view.module.css
+++ b/src/components/admin-page/card/dafault-view/default-view.module.css
@@ -57,7 +57,7 @@
 
 .image img {
   width: 100%;
-  height: 150px;
+  height: 145px;
   margin-top: 10px;
   object-fit: cover;
   object-position: 50% 50%;
