--- a/src/components/admin-page/new-card/new-card.module.css
+++ b/src/components/admin-page/new-card/new-card.module.css
@@ -1,6 +1,6 @@
 .card {
   composes: category from "../category/category.module.css";
-  min-height: 360px;
+  min-height: 345px;
   font-size: 1rem;
 }
 
