--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -39,7 +39,7 @@
   /* breakpoints */
   --sm: 576px;
   --md: 768px;
-  --lg: 1024px;
+  --lg: 1200px;
   --xl: 1440px;
 
   /* transitions */
